oxiplate-derive/tests/broken/operators/unreachable-prefix-operator.stderr
error: Expected an expression.
 --> tests/broken/operators/unreachable-prefix-operator.rs:5:23
  |
5 | #[oxiplate_inline("{{ @a }}")]
  |                       ^^^^^
